[package]
name = "local-search"
version = "0.1.0"
authors = ["Samuel Walladge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
glob = "0.3.0"
log = "0.4"
serde = { version = "1.0.99", features = ["derive"] }
simplelog = "0.6.0"
structopt = "0.2.18"
tantivy = "0.10.1"
toml = "0.5.1"
