[package]
name = "searchr"
version = "0.1.0"
authors = ["Samuel Walladge <samuel@swalladge.net>"]
description = "Command line local plain text files indexer and searcher."
readme = "README.md"
keywords = ["cli", "search", "tantivy"]
repository = "https://github.com/swalladge/searchr/"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
glob = "0.3.0"
log = "0.4"
serde = { version = "1.0.99", features = ["derive"] }
simplelog = "0.6.0"
structopt = "0.2.18"
tantivy = "0.10.1"
toml = "0.5.1"
